<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayoutNuevaMascota"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NuevaMascota" >

    <TextView
        android:id="@+id/txtTituloEditarMascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/txtTituloEditarMascota"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtTituloEditarMascota" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
"

            <TextView
                android:id="@+id/txtLblNombreNuevaMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtLblNombreNuevaMascota" />

            <EditText
                android:id="@+id/editTxtNombreEditarMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtLblTipoNuevaMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtLblTipoNuevaMascota" />

            <EditText
                android:id="@+id/editTxtTipoEditarMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:layout_weight="1"
                android:onClick="eligeTipo" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtLblRazaNuevaMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtRaxaNuevaMascota" />

            <EditText
                android:id="@+id/editTxtRazaEditarMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtLblSexoNuevaMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtLblSexoNuevaMascota" />

            <EditText
                android:id="@+id/editTxtSexoEditarMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:onClick="eligeSexo"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtFechaNacNuevaMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtFechaNacNuevaMascota" />

            <EditText
                android:id="@+id/editTxtFechaEditarMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:onClick="eligeFecha"
                android:layout_weight="1" />

        </TableRow>
        
         <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtLblPropietarioNuevaMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Voluntario" />

            <EditText
                android:id="@+id/editTxtPropietarioEditarMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:onClick="eligePropietario"
                android:layout_weight="1" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnAceptarEditarMascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="pulsaAceptar"
        android:text="@string/btnAceptarNuevaMascota"
        android:textColor="@color/blanco" />

</RelativeLayout>

