<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NuevoPropietario" >

    <TextView
        android:id="@+id/txtTituloNuevoProp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Introduce los datos del nuevo voluntario" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtLblNombreNuevoProp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtLblNombreNuevoProp" />

            <EditText
                android:id="@+id/editTxtNombreNuevoProp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_weight="1" >
                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtApellido1NuevoProp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apellido Paterno" />

            <EditText
                android:id="@+id/editTxtApellido1NuevoProp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtApellid2NuevoProp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apellido Materno" />

            <EditText
                android:id="@+id/editTxtApellido2NuevoProp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtDniNuevoProp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CI:" />

            <EditText
                android:id="@+id/editTxtDniNuevoProp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtTelefonoNuevoProp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Celular" />

            <EditText
                android:id="@+id/editTxtTelefonoNuevoProp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtEmailNuevoProp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtEmailNuevoProp" />

            <EditText
                android:id="@+id/editTxtEmailNuevoProp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:layout_weight="1" >

            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtDireccionNuevoProp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDireccionNuevoProp" />

            <EditText
                android:id="@+id/editTxtDireccionNuevoProp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:layout_weight="1" />

        </TableRow>

    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/btnAceptarNuevoProp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:onClick="pulsaAceptar"
            android:text="@string/btnAceptarNuevoProp"
            android:textColor="@color/blanco" />

    </RelativeLayout>

</LinearLayout>
